Adding Dockerfile templates for build artifact versioning

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,10 @@ app02:
   hostname: "app01"
 
 nosqldb:
-  image: mongo:latest
+  build: mongo/
   hostname: "nosqldb"
+  volumes:
+   - "/opt/mongodb:/data/db"
 
 elk:
   build: elk/
