--- a/tomcat/Dockerfile-template
+++ b/tomcat/Dockerfile-template
@@ -6,7 +6,7 @@ MAINTAINER Gary A. Stafford <garystafford@rochester.rr.com>
 
 ENV REFRESHED_AT 2015-09-02
 
-ENV appfile spring-music-1.9.war
+ENV appfile {{ war_file }}
 
 RUN mv /usr/local/tomcat/webapps/ROOT /usr/local/tomcat/webapps/_ROOT
 
