Adding syslog appender

--- a/elk/logstash-logspout.conf
+++ b/elk/logstash-logspout.conf
@@ -1,13 +1,44 @@
 input {
   udp {
-    type => "dockerlogs"
-    port =>  5000
+    port  =>  5000
     codec => json
+    type  => "dockerlogs"
+  }
+
+  udp {
+    type => "log4j2"
+    port => 5001
   }
 }
 
 filter {
-  #
+  if [type] == "log4j2" {
+    mutate {
+      gsub => [
+        "message1", "\n", " ",
+        "message2", "\t", " ",
+        "message3", "\\\"", "\""
+      ]
+    }
+  }
+
+  if [type] == "dockerlogs" {
+    if ([message] =~ "^\tat ") {
+      drop {}
+    }
+
+    grok {
+      break_on_match => false
+      match => [ "message", " responded with %{NUMBER:status_code:int}" ]
+      tag_on_failure => []
+    }
+
+    grok {
+      break_on_match => false
+      match => [ "message", " in %{NUMBER:response_time:int}ms" ]
+      tag_on_failure => []
+    }
+  }
 }
 
 output {
