--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -8,6 +8,8 @@ ENV REFRESHED_AT 2015-09-02
 
 ENV appfile spring-music-1.9.war
 
+LABEL version="1.0"
+
 RUN mv /usr/local/tomcat/webapps/ROOT /usr/local/tomcat/webapps/_ROOT
 
 COPY tomcat-users.xml /usr/local/tomcat/conf/tomcat-users.xml
