Update logging config

--- a/elk/logstash-logspout.conf
+++ b/elk/logstash-logspout.conf
@@ -6,13 +6,13 @@ input {
   }
 
   udp {
-    type => "log4j2"
+    type => "log4j"
     port => 5001
   }
 }
 
 filter {
-  if [type] == "log4j2" {
+  if [type] == "log4j" {
     mutate {
       gsub => [
         "message1", "\n", " ",
