--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,8 @@
 # Based on http://nginx.org/en/docs/http/load_balancing.html
 upstream backend {
   #ip_hash;
-  server app01:8080;
-  server app02:8080;
+  server music_app01_1:8080;
+  server music_app02_1:8080;
 }
 
 server {
