Fixing Docker Hub builds

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -8,7 +8,7 @@ ENV REFRESHED_AT 2015-09-02
 
 ENV STATIC_FILE spring-music-static.zip
 
-COPY build-artifacts/${STATIC_FILE} /tmp/${STATIC_FILE}
+COPY ./build-artifacts/${STATIC_FILE} /tmp/${STATIC_FILE}
 
 RUN apt-get update -y && \
   apt-get install unzip nano -y && \
