--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -15,7 +15,7 @@
 
 
 proxy:
-  image: garystafford/music_proxy
+  image: garystafford/spring-music-docker-nginx
   ports:
    - "80:80"
   hostname: "proxy"
@@ -24,17 +24,37 @@ proxy:
    - "TERM=xterm"
 
 app:
-  image: garystafford/music_app
+  image: garystafford/spring-music-docker-tomcat
   ports:
    - "8080"
   hostname: "app"
   environment:
-    - "constraint:itype==app"
+   - "constraint:itype==app"
 
 nosqldb:
-  image: garystafford/music_nosqldb
+  image: garystafford/spring-music-docker-mongo
   ports:
    - "27017"
   hostname: "nosqldb"
   environment:
     - "constraint:itype==nosqldb"
+
+elk:
+  image: garystafford/spring-music-docker-elk
+  ports:
+   - "8081:80"
+   - "8082:9200"
+  expose:
+    - "5000/upd"
+  environment:
+   - "constraint:itype==logging"
+
+logspout:
+  image: garystafford/spring-music-docker-logspout
+  volumes:
+   - "/var/run/docker.sock:/tmp/docker.sock"
+  ports:
+   - "8083:80"
+  environment:
+   - ROUTE_URIS=logstash://music_elk_1:5000
+   - "constraint:itype==logging"
