Refactoring for weave and fix typo in build script

--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -32,6 +32,8 @@ nosqldb:
   ports:
    - "27017"
   hostname: "nosqldb"
+  volumes:
+   - "/opt/mongodb:/data/db"
   environment:
     - "constraint:itype==database"
 
