--- a/nginx/default_template_machine.conf
+++ b/nginx/default_template_machine.conf
@@ -1,8 +1,7 @@
 # Based on http://nginx.org/en/docs/http/load_balancing.html
 upstream backend {
-  #ip_hash;
-  server music_app01_1:8080;
-  server music_app02_1:8080;
+  #{{ lb_method }}
+  #{{ app_servers }}
 }
 
 server {
