--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,7 @@
 # Based on http://nginx.org/en/docs/http/load_balancing.html
 upstream backend {
-  server music_app_1:8080;
-  server music_app_2:8080;
-  server music_app_3:8080;
+  server music_app01_1:8080;
+  server music_app02_1:8080;
 }
 
 server {
