--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,7 @@ upstream backend {
 
 server {
   listen        80;
-  server_name   localhost;
+  server_name   proxy;
 
   location ~* \/assets\/(css|images|js|template)\/* {
     root          /usr/share/nginx/;
