--- a/docker-compose-v2.yml
+++ b/docker-compose-v2.yml
@@ -15,77 +15,51 @@ services:
   proxy:
     build: nginx/
     ports:
-     - "8380:80"
+     - "80:80"
     depends_on:
      - app01
      - app02
     hostname: "proxy"
     container_name: "proxy"
-    # networks:
-    #   - demo_overlay_net
 
   app01:
     build: tomcat/
     ports:
      - "8180:8080"
     depends_on:
-     - nosqldb
+     - mongodb
     hostname: "app01"
     container_name: "app01"
-    # networks:
-    #   - demo_overlay_net
 
   app02:
     build: tomcat/
     ports:
      - "8280:8080"
     depends_on:
-     - nosqldb
+     - mongodb
     hostname: "app02"
     container_name: "app02"
-    # networks:
-    #   - demo_overlay_net
 
-  nosqldb:
-    build: mongo/
-    depends_on:
-     - logspout
-    hostname: "nosqldb"
-    container_name: "nosqldb"
-    volumes:
-     - "data:/data/db"
-    # networks:
-    #   - demo_overlay_net
-
-  logspout:
-    build: logspout/
-    volumes:
-     - "/var/run/docker.sock:/var/run/docker.sock"
-    ports:
-     - "8083:80"
+  mongodb:
+    build: mongodb/
     depends_on:
      - elk
-    hostname: "logspout"
-    container_name: "logspout"
-    environment:
-      - ROUTE_URIS=logstash://elk:5000
-    # networks:
-    #   - demo_overlay_net
+    hostname: "mongodb"
+    container_name: "mongodb"
+    volumes:
+     - "music_data:/data/db"
+     - "music_data:/data/configdb"
 
   elk:
-    build: elk/
+    image: sebp/elk:latest
     ports:
-     - "8081:80"
-     - "8082:9200"
+      - "5601:5601"
+      - "9200:9200"
+      - "5044:5044"
+      - "5000:5000"
     hostname: "elk"
     container_name: "elk"
-    # networks:
-    #   - demo_overlay_net
-
-# networks:
-#   music_overlay_net:
-#     external: true
 
 volumes:
-  data: {}
-    # external: true
+  music_data:
+    external: true
