--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -1,21 +1,23 @@
 # Apache Tomcat image with build artifact
 
-FROM tomcat:latest
+FROM tomcat:8.5.4-jre8
 
 MAINTAINER Gary A. Stafford <garystafford@rochester.rr.com>
-ENV REFRESHED_AT 2016-07-30
+ENV REFRESHED_AT 2016-09-02
 
 ENV GITHUB_REPO https://github.com/garystafford/spring-music/raw/build-artifacts
 ENV APP_FILE spring-music.war
+ENV TERM xterm
+ENV JAVA_OPTS -Djava.security.egd=file:/dev/./urandom
 
 RUN apt-get update -qq && \
   apt-get install -qqy curl wget && \
   apt-get clean
 
 RUN touch /var/log/spring-music.log && \
-chmod 666 /var/log/spring-music.log
+  chmod 666 /var/log/spring-music.log
 
-RUN wget -O /usr/local/tomcat/webapps/ROOT.war ${GITHUB_REPO}/${APP_FILE} && \
+RUN wget -q -O /usr/local/tomcat/webapps/ROOT.war ${GITHUB_REPO}/${APP_FILE} && \
   mv /usr/local/tomcat/webapps/ROOT /usr/local/tomcat/webapps/_ROOT
 
 COPY tomcat-users.xml /usr/local/tomcat/conf/tomcat-users.xml
@@ -25,9 +27,10 @@ COPY tomcat-users.xml /usr/local/tomcat/conf/tomcat-users.xml
 #########################################################################################
 
 ### install Filebeat
-RUN curl -L -O https://download.elastic.co/beats/filebeat/filebeat_1.2.3_amd64.deb \
- && dpkg -i filebeat_1.2.3_amd64.deb \
- && rm filebeat_1.2.3_amd64.deb
+ENV FILEBEAT_VERSION=filebeat_1.2.3_amd64.deb
+RUN curl -L -O https://download.elastic.co/beats/filebeat/${FILEBEAT_VERSION} \
+ && dpkg -i ${FILEBEAT_VERSION} \
+ && rm ${FILEBEAT_VERSION}
 
 ### configure Filebeat
 # config file
