Refactoring Dockerfiles and build script

--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -3,28 +3,24 @@
 FROM tomcat:8.5.4-jre8
 
 MAINTAINER Gary A. Stafford <garystafford@rochester.rr.com>
-ENV REFRESHED_AT 2016-09-02
+ENV REFRESHED_AT 2016-09-17
 
 ENV GITHUB_REPO https://github.com/garystafford/spring-music/raw/build-artifacts
 ENV APP_FILE spring-music.war
 ENV TERM xterm
 ENV JAVA_OPTS -Djava.security.egd=file:/dev/./urandom
 
-RUN apt-get update -qq && \
-  apt-get install -qqy curl wget && \
-  apt-get clean
-
-RUN touch /var/log/spring-music.log && \
-  chmod 666 /var/log/spring-music.log
-
-RUN wget -q -O /usr/local/tomcat/webapps/ROOT.war ${GITHUB_REPO}/${APP_FILE} && \
-  mv /usr/local/tomcat/webapps/ROOT /usr/local/tomcat/webapps/_ROOT
+RUN apt-get update -qq \
+  && apt-get install -qqy curl wget \
+  && apt-get clean \
+  \
+  && touch /var/log/spring-music.log \
+  && chmod 666 /var/log/spring-music.log \
+  \
+  && wget -q -O /usr/local/tomcat/webapps/ROOT.war ${GITHUB_REPO}/${APP_FILE} \
+  && mv /usr/local/tomcat/webapps/ROOT /usr/local/tomcat/webapps/_ROOT
 
 COPY tomcat-users.xml /usr/local/tomcat/conf/tomcat-users.xml
-
-#########################################################################################
-# below from https://github.com/spujadas/elk-docker/blob/master/nginx-filebeat/Dockerfile
-#########################################################################################
 
 ### install Filebeat
 ENV FILEBEAT_VERSION=filebeat_1.2.3_amd64.deb
